The oof2 version number set in CMakeLists.txt is now stored in oofconfig.h.
The version set by make_dist in common/oofversion.py is no longer used.

--- a/SRC/common/CMakeLists.txt
+++ b/SRC/common/CMakeLists.txt
@@ -123,6 +123,7 @@ swig_sources(
   lock
   # mpitools  ## TODO: Add an mpi compilation option 
   ooferror
+  oofversion
   pixelattribute
   pixelgroup
   pixelselectioncourier
