make_dist.in doesn't need to be distributed, but CMakeLists.txt has to check before using it.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -421,10 +421,13 @@ install(
 # work and we have a perfectly good make_dist script from the old
 # days.  But in order to ensure that the version number used by the
 # script is the same as the version number defined here, the script is
-# created from make_dist.in.
+# created from make_dist.in.  Check that the file exists because
+# make_dist.in isn't itself included in the distribution.
 
-configure_file(
-  ${PROJECT_SOURCE_DIR}/make_dist.in
-  ${PROJECT_BINARY_DIR}/make_dist
-  @ONLY
+if(EXISTS "${PROJECT_SOURCE_DIR}/make_dist.in")
+  configure_file(
+    ${PROJECT_SOURCE_DIR}/make_dist.in
+    ${PROJECT_BINARY_DIR}/make_dist
+    @ONLY
   )
+endif()
