--- a/make_dist.in
+++ b/make_dist.in
@@ -86,10 +86,9 @@ Debugging options are:
 
 version = "@oof2_VERSION@"
 comment = None
-branch = "master"
+branch = None
 dryrun = False
 noclean = False
-dimension = 2
 
 try:
     optlist, args = getopt.getopt(sys.argv[1:], '', options)
@@ -111,13 +110,7 @@ for opt in optlist:
 
 startdir = os.getcwd()
 
-# # Are we building oof2 or oof3d? This info is stored in
-# # distname.distname.  We get this from the directory in which
-# # make_dist is being run.
-# import distname
-
 print(f"Building oof2 distribution named f{version}", file=sys.stderr)
-
 
 # Create a temp directory.
 tempdir = tempfile.mkdtemp(prefix='oof-tempdir-'+version+'-')
@@ -141,7 +134,6 @@ try:
     # Clone the git repository into a directory whose name is given by
     # the version number.
     distdir = "oof2-" + version
-    print("giturl:", giturl, "distdir:", distdir)
     if branch is None:
         cmd = ['git', 'clone', giturl, distdir]
     else:
@@ -153,7 +145,7 @@ try:
     os.chdir(distdir)
 
     # Construct the commit message and new branch name (aka tag)
-    commit_msg = (f"Building oof2 release version {version}")
+    commit_msg = f"Building oof2 release version {version}"
     if comment:
         commit_msg += " -- " + comment
     tag = "oof2-" + version
@@ -173,7 +165,9 @@ try:
         print("Using '%s' instead." % oldtag, file=sys.stderr)
         tag = oldtag
     
-    # Create a branch for the release.
+    # Create a branch for the release.  This is done in the cloned
+    # repository in the temp directory, so if dryrun==True it has no
+    # long lasting effects.
 
     # First see if the branch already exists.  "git ls-remote" returns
     # 2 if the branch doesn't exist, when given the --exit-code
@@ -189,44 +183,17 @@ try:
         # the merge, since nobod [y finished writing this comment!]
         newbranch = False
         osCall('git', 'checkout', tag)
-        print("Merging", branch, "into", tag, file=sys.stderr)
+        print(f"Merging {branch} into {tag}", file=sys.stderr)
         proc = subprocess.Popen(['git', 'merge', '--no-edit', branch],
                                 stdout=subprocess.PIPE, stderr=subprocess.PIPE)
         stdoutdata, stderrdata = proc.communicate()
         print(stdoutdata, file=sys.stderr)
         if proc.returncode != 0:
             print(stderrdata, file=sys.stderr)
-            print("Failed to merge", branch, "into", tag, file=sys.stderr)
+            print(f"Failed to merge {branch} into {tag}", file=sys.stderr)
             sys.exit(1)
 
-    # # Set the version number in setup.py and SRC/common/oofversion.py.
-    # # The sed command finds a line beginning with
-    # # "version_from_make_dist" and replaces everything after the
-    # # equals sign with a string containing the version number.
-    # sedcmd = '/^version_from_make_dist/s/=.*/= \\\"%s\\\"/' % version
-    # run_sed(sedcmd, "", "setup.py")
-    # run_sed(sedcmd, "SRC/common", "oofversion.py")
-
-    
-    # # Check all the modifications into git, and tag with the version
-    # # number.  It's necessary to go back to the distribution directory
-    # # to use git.
-    # osCall('git', 'add', 'SRC/common/oofversion.py', 'setup.py')
-
-    # cmd = ['git', 'commit', '--allow-empty', '-m', commit_msg]
-    # print('--->', ' '.join(cmd), file=sys.stderr)
-    # if not dryrun:
-    #     proc = subprocess.Popen(cmd, stdout=subprocess.PIPE,
-    #                             stderr=subprocess.PIPE)
-    #     stdoutdata, stderrdata = proc.communicate()
-    #     if proc.returncode != 0:
-    #         print("Back from commit, status=", proc.returncode, file=sys.stderr)
-    #         print("stdoutdata=", stdoutdata, file=sys.stderr)
-    #         print("stderrdata=", stderrdata, file=sys.stderr)
-    #         sys.exit(0)
-
-    # Push the branch to the server, unless this is just a dry
-    # run.
+    # Push the branch to the server, unless this is just a dry run.
     if not newbranch:
         cmd = ['git', 'push', 'origin', tag]
     else:
