Trying to get cmake to generate swigruntime.h.
Currently we provide swigruntime-410.h and have no way to change
versions automatically if a different version of swig is used.  Since
the file is generated by running "swig -external-runtime", cmake
ought to be able to do it.  But I haven't found a way to get it to
work that doesn't also force all of oof2 to be rebuilt every time
"make" is run.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -319,6 +319,25 @@ configure_file(
   @ONLY
   )
 
+# Create swigruntime.h from swig.
+## Targets added by add_custom_target are always out of date, so
+## swigruntime.h will always be created, and anything that imports it
+## will always be rebuilt, whenever make is run.  This is bad. Can
+## swigruntime.h be created only when the swig version is changed?
+## Use add_custom_command instead?
+# add_custom_target(
+#   swigruntime.h
+#   COMMAND swig -python -external-runtime swigruntime.h
+#   COMMENT Creating swigruntime.h
+#   )
+#add_dependencies(oof2common swigruntime.h)
+
+add_custom_command(
+  OUTPUT swigruntime.h
+  COMMAND swig -python -external-runtime swigruntime.h
+  )
+##add_dependencies(oof2common swigruntime.h)  # doesn't work
+
 foreach(script ${oofscripts})
   configure_file(
   ${PROJECT_SOURCE_DIR}/${script}.in
