The swig runtime header is generated at compile time if necessary, and python and swig versions are set more easily.
When swig methods are called outside of swig-generated code, it's
necessary to include the header generated by "swig -external-runtime".
That header differs depending on the version of swig used to
generate it.   Previously we were using the header from swig 4.1
even if we were using swig 4.0.  This seemed to work, but probably
wasn't a good idea.  Now CMakeLists.txt defines a command to
generate swigruntime.h if neccesary.

Also, python and swig versions set in ccmake are chosen from
a list of options, instead of being typed by the user.

--- a/SRC/common/CMakeLists.txt
+++ b/SRC/common/CMakeLists.txt
@@ -83,8 +83,6 @@ target_sources(oof2common
   smallmatrix.h
   statgroups.C
   statgroups.h
-  swigruntime-402.h
-  swigruntime-410.h
   switchboard.C
   switchboard.h
   threadstate.C
@@ -94,7 +92,16 @@ target_sources(oof2common
   tostring.h
   trace.C
   trace.h
-  )
+)
+
+# oofswigruntime.h depends on swigruntime.h.  Because swigruntime.h is
+# the output of a custom command the dependency isn't picked up by the
+# usual methods.
+set_property(
+  SOURCE oofswigruntime.h
+  DIRECTORY ${PROJECT_SOURCE_DIR}
+  PROPERTY OBJECT_DEPENDS swigruntime.h
+)
 
 swig_sources(
   SWIGFILES
