--- a/oof2-guitest.in
+++ b/oof2-guitest.in
@@ -19,6 +19,9 @@ import sys
 import os
 from math import *
 
+# This should make it unnecessary for users to set PYTHONPATH themselves.
+sys.path.append("@CMAKE_INSTALL_PREFIX@/@SITE_PACKAGES@")
+
 import oof2
 sys.path.append(os.path.dirname(oof2.__file__))
 from TEST.GUI import guitests
